# FCDL

./: README.md  pyproject.toml
compiler/: cli.py  ir.py  planner.py  visitor.py
compiler/generator/: __init__.py
compiler/generator/flower_compose/: Dockerfile.j2  client.py.j2  docker-compose.yml.j2  orchestrator.py.j2  utility.py.j2
examples/: basic.fcdl  mnist_basic.fcdl  predict_client_MNIST.py
spec/: FCDL.g4  fcdl_spec.odt
